--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/pretendard@1.3.6/dist/web/static/pretendard.css"
     />
+    <!-- Kakao Login -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
 
     <title>FOUR LETTERS</title>
   </head>
